<resources>
    <string name="app_name">MySpeedTest</string>
    <string name="title_speed_test">Speed Test</string>
    <string name="title_settings">Settings</string>
    <string name="btn_start_title">START</string>
    <string name="instant_download_label">Instant download:</string>
    <string name="download_label">Download:</string>
    <string name="instant_upload_label">Instant upload:</string>
    <string name="upload_label">Upload:</string>
    <string name="tv_theme_label_text">Theme</string>
    <string name="rb_dark_text">Dark</string>
    <string name="rb_light_text">Light</string>
    <string name="rb_system_text">System</string>
    <string name="tv_url_download_label_text">Download URL</string>
    <string name="et_server_url_download_text">Enter Download URL</string>
    <string name="cb_download_text">Download</string>
    <string name="cb_upload_text">Upload</string>
    <string name="btn_save_text">SAVE</string>
    <string name="et_server_url_upload_text">Enter Upload URL</string>
    <string name="tv_url_upload_label_text">Enter Upload URL</string>
    <string name="invalidResponseError">Invalid Response</string>
    <string name="socketError">Socket Error</string>
    <string name="socketTimeoutError">Socket Timeout</string>
    <string name="connectionError">Connection Error</string>
    <string name="malformedUriError">Malformed Uri Error</string>
    <string name="usupportedProtocolError">Unsupported Protocol Error\n</string>
    <string name="unknownError">Unknown Error</string>
</resources>